# FAWN-KV

./: .gitignore  AUTHORS  INSTALL  INSTALL.MACOSX  Makefile.am  NOTICE  README  STYLE  acinclude.m4  configure.ac
fawnds/: Makefile.am  README  db_structures.h  fawnds.cc  fawnds.h  fawnds_bench.cc  fawnds_flash.cc  fawnds_flash.h  fawnds_test.full  fawndsmesg.thrift  hash_functions.h  runfulltest.sh  runtest.sh
fawnkv/: FawnKVBackendHandler.cpp  FawnKVFrontendHandler.cpp  FawnKVServerHandler.cpp  FawnKVServerHandler.h  Makefile.am  Manager.cpp  Manager.h  README  cache.cpp  cache.h  fawnkv.thrift  fawnkvmesg.thrift  fe.cpp  fe.h  fe_cache.cpp  fe_cache.h  node.cpp  node.h  node_mgr.cpp  node_mgr.h  node_mgr_db.cpp  nodehandle.cpp  nodehandle.h  ring.cpp  ring.h  virtualnode.cpp  virtualnode.h
lib/: Makefile.am
lib/cpp/: Makefile.am  TFawnKV.cpp  TFawnKV.h  TFawnKVRemote.cpp  TFawnKVRemote.h  tester.cpp  tester_remote.cpp
lib/java/: FawnKVTester  Makefile.am  README  build.xml
lib/java/src/: FawnKVClt.java  Tester.java
lib/rb/: Makefile.am  TFawnKV.rb  tester.rb
m4/: README
patches/: fawn-thrift.patch
test/: Makefile.am
test/fawnds/: Makefile.am  fawnds_test.cc
test/management/: Makefile.am  lattester.cpp  ringtester.cpp
utils/: Makefile.am  dbid.h  dbidtest.cc  dbparse.pl  debug.h  fawnnet.cc  fawnnet.h  hashutil.h  print.cc  print.h
ycsb/: README
ycsb/fawnkv/lib/: README
ycsb/fawnkv/src/com/yahoo/ycsb/db/: FawnKVClient.java
