ACLOCAL_AMFLAGS=-I m4

SUBDIRS = utils fawnds fawnkv lib test
CLEANFILES = core *.core *~
DISTCLEANFILES = autom4te*.cache config.status config.log
MAINTAINERCLEANFILES = aclocal.m4 install-sh mkinstalldirs \
        missing configure config.guess config.sub config.h.in \
        ltconfig ltmain.sh COPYING INSTALL Makefile.in stamp-h.in

EXTRA_DIST = ycsb